# social-media-observatory

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/auth/: mastodon.py
crawlers/mastodon/: Dockerfile  README.md  main.py  requirements.txt
crawlers/tiktok/: Dockerfile  main.py  requirements.txt
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/components/: Authorization.css  Authorization.jsx
